--- a/extensions/admin/order_create.html
+++ b/extensions/admin/order_create.html
@@ -34,16 +34,13 @@ fieldsets 'can' be defined here if a specific order is desired. If fieldsets are
 	<input type="hidden" name="override" value="1" />
 	
 	<label><span>Qty:</span><input type="text" name="quantity" size="3" value="1"  /></label>
-	<label><span>Product id:</span><input type='text' name='product_id'  /></label>
+	<label><span>Product id:</span><input type='text' name='product_id' size='10' /></label>
 	<label><span>Price: </span><input type='number' class='price' size='5' name='price' step='0.01' min='0' /></label>
-	<button onClick="app.ext.convertSessionToOrder.a.addToCart($(this).parent().serializeJSON())" class='ui-button ui-state-default ui-corner-all'>Add</button>
-<!--	<button onClick="app.ext.admin.a.showFinderInModal('CHOOSER');" class='ui-button ui-state-default ui-corner-all'>Find</button> -->
-	
+	<button data-app-event="convertSessionToOrder|cartItemAddFromForm">Add</button>
+	<hr />
+<button data-app-event="convertSessionToOrder|cartItemAddWithChooser">Use Chooser</button> <span class='hint'>use this for an easier method to select items with variations</span>
 </fieldset>
-</form><!--
-<hr />
-<button data-app-event="convertSessionToOrder|cartItemAdd">Use Chooser</button> <span class='hint'>use this for an easier method to select items with variations</span>
--->
+</form>
 </div>
 
 		<div id='chkoutCartSummaryContainer'></div>
@@ -78,12 +75,18 @@ chkoutCartContents - will get loaded with the productListTemplateContentsSummary
 	<div data-bind='var: cart(sum/tax_total); format:money; className:orderTax; hideZero:true;currencySign: $; pretext:Tax: ; '></div>
 
 	<div data-bind='var: cart(want/shipping_id); format:shipInfoById; className:orderShipping; hideZero:false; extension:store_checkout;'></div>
+	<div data-bind='var: cart(sum/hnd_total); format:money; className:hndTotal; currencySign: $; pretext:Handling: ; '></div>
 
 	<div data-bind='var: cart(sum/order_total); format:money; className:orderTotal; hideZero:false; currencySign: $; pretext:Order Total: ; '></div>
 
 	<div data-bind='var: cart(sum/gfc_total); format:money; className:orderGiftcardTotal; hideZero:false; currencySign: $; pretext:Giftcard(s): ; '></div>
 	<div data-bind='var: cart(sum/pnt_total); format:money; className:rewardPointsTotal; hideZero:false; currencySign: $; pretext:Reward Points: ; '></div>
 	<div data-bind='var: cart(sum/rmc_total); format:money; className:returnsCreditTotal; hideZero:false; currencySign: $; pretext:Returns Credit: ; '></div>
+	<div data-bind='var: cart(sum/spc_total); format:money; className:spcTotal; currencySign: $; pretext:Specialty: ; '></div>
+	<div>
+		<span data-bind='var: cart(sum/bnd_method); format:text; posttext:: ; '></span>
+		<span data-bind='var: cart(sum/bnd_total); format:money; hideZero:true; currencySign: $;'></span>
+	</div>
 
 	<div data-bind='var: cart(sum/balance_due_total); format:orderBalance; className:orderBalanceDue; hideZero:false; currencySign: $; pretext:Balance Due: ; extension:store_checkout;'></div>
 
@@ -311,7 +314,7 @@ do NOT change any div id's or messaging will not work properly.
 			<li><a href="#nonStoredPaymentsContainer">More Options</a></li>
 		</ul>
 		<div id='storedPaymentsContainer'>
-			<table data-bind="var: buyerWalletList(@wallets); format:object2Template; loadsTemplate: buyerWalletsListItem;"></table>
+			<table data-bind="var: buyerWalletList(@wallets); format:processList; loadsTemplate: buyerWalletsListItem;"></table>
 		</div>
 		<div id='nonStoredPaymentsContainer'>
 			<div id='chkout-payOptions' class='labelsAsBreaks' data-bind='var: getPaymentMethods(@methods); format:payMethodsAsRadioButtons; extension: convertSessionToOrder;'></div>
@@ -412,6 +415,29 @@ because it's used in 'print' mode, some legacy attributes are used.
 </tr>
 <tr>
 
+
+	<td valign='top'>
+	<h3>Bill To</h3>
+<address>
+<h4>
+	<span data-bind='var:order(bill/firstname);format:text;'></span>
+	<span data-bind='var:order(bill/lastname);format:text;'></span>
+</h4>
+<h5 data-bind='var:order(bill/company);format:text;'></h5>
+<div data-bind='var:order(bill/address1);format:text;'></div>
+<div data-bind='var:order(bill/address2);format:text;'></div>
+<div>
+	<span data-bind='var:order(bill/city);format:text;posttext:, ;'></span>
+	<span data-bind='var:order(bill/region);format:text;posttext:. ;'></span>
+	<span data-bind='var:order(bill/postal);format:text; defaultVar:order(data.bill_int_zip);'></span>
+</div>
+<div data-bind='var:order(bill/countrycode);format:text;'></div>
+<div data-bind='var:order(bill/email);format:text;'></div>
+<div data-bind='var:order(bill/phone);format:text;'></div>
+</address>
+	</td>
+
+
 	<td valign='top'>
 	<h3>Destination</h3>
 <address>
@@ -419,6 +445,7 @@ because it's used in 'print' mode, some legacy attributes are used.
 	<span data-bind='var:order(ship/firstname);format:text;'></span>
 	<span data-bind='var:order(ship/lastname);format:text;'></span>
 </h4>
+<h5 data-bind='var:order(ship/company);format:text;'></h5>
 <div data-bind='var:order(ship/address1);format:text;'></div>
 <div data-bind='var:order(ship/address2);format:text;'></div>
 <div>
@@ -434,25 +461,7 @@ because it's used in 'print' mode, some legacy attributes are used.
 	</td>
 
 
-	<td valign='top'>
-	<h3>Bill To</h3>
-<address>
-<h4>
-	<span data-bind='var:order(bill/firstname);format:text;'></span>
-	<span data-bind='var:order(bill/lastname);format:text;'></span>
-</h4>
-<div data-bind='var:order(bill/address1);format:text;'></div>
-<div data-bind='var:order(bill/address2);format:text;'></div>
-<div>
-	<span data-bind='var:order(bill/city);format:text;posttext:, ;'></span>
-	<span data-bind='var:order(bill/region);format:text;posttext:. ;'></span>
-	<span data-bind='var:order(bill/postal);format:text; defaultVar:order(data.bill_int_zip);'></span>
-</div>
-<div data-bind='var:order(bill/countrycode);format:text;'></div>
-<div data-bind='var:order(bill/email);format:text;'></div>
-<div data-bind='var:order(bill/phone);format:text;'></div>
-</address>
-	</td>
+
 </tr>
 <tr>
 	<td class='orderContentsProdlistContainer' colspan='2'>
@@ -565,6 +574,7 @@ This should get moved to orders when order is taken over
 	<span data-bind='var:order(bill/firstname); format:text; pretext:Bill To: ;'></span>
 	<span data-bind='var:order(bill/lastname);format:text;'></span>
 </h4>
+<h5 data-bind='var:order(bill/company);format:text;'></h5>
 <div data-bind='var:order(bill/address1);format:text;'></div>
 <div data-bind='var:order(bill/address2);format:text;'></div>
 <div>
@@ -584,6 +594,7 @@ This should get moved to orders when order is taken over
 	<span data-bind='var:order(ship/firstname);format:text; pretext:Ship To: ;'></span>
 	<span data-bind='var:order(ship/lastname);format:text;'></span>
 </h4>
+<h5 data-bind='var:order(ship/company);format:text;'></h5>
 <div data-bind='var:order(ship/address1);format:text;'></div>
 <div data-bind='var:order(ship/address2);format:text;'></div>
 <div>
@@ -593,14 +604,6 @@ This should get moved to orders when order is taken over
 </div>
 <div data-bind='var:order(ship/countrycode);format:text;'></div>
 </address>
-
-	</td>
-</tr>
-
-<tr>
-	<td colspan='2'>
-
-<h3 data-bind='var:order(data.pool);format:text; pretext:Order Status: ;'></h3>
 
 	</td>
 </tr>
