--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"20130201091900",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20130201110700",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
 	"httpsURL":"https://ssl.zoovy.com/s=www.9c0a9a.snap.zoovy.net/",
@@ -350,7 +350,9 @@ don't modify the 'data-templateid' unless you are changing template names and up
 
 	<ul class='breadcrumb clearfix noPadOrMargin fluidList' data-bind='var: category(id); format:breadcrumb; extension:store_navcats; loadsTemplate: breadcrumbTemplate;'></ul>
 
-	<img data-bind="var: category(%page.banner1); format: banner; editor: banner; height:250; width:750; extension: myRIA;" />
+	<!--
+	<img data-bind="var: category(%page.banner1); format: imageURL;" height="250" width="750"/>
+	-->
 	<div class='contentContainer marginBottom'>
 
 		<h2 data-bind="var: category(pretty); format:catText; extension: myRIA; editor:text; pretext:Shop ;" class='greyGradient'></h2>
