--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ app.u.loadScript(app.vars.baseURL+"gkworld_init.js");
 		<span class='phone'>1.570.832.4571</span>
 	</div>
 
-	<a class="chatLink" href="http://messenger.providesupport.com/messenger/1po7j2ubozcbl1v7nfcwgmz4fc.html" target="_blank">
+	<a class="chatLink" onClick="return showContent('company',{'show':'contact'});">
 		<div class='chatContainer spriteBG'>Chat</div>
 	</a>
 
