--- a/index.html
+++ b/index.html
@@ -768,23 +768,34 @@ It's done this way because ID's hard coded into template are bad mojo (templates
 
 	<td class='prodSummaryContainer marginBottom no_underline'>
 	<h1 data-bind='var: product(zoovy:prod_name); format:text;'></h1>
-	<h6 class='ztable_row_small stid' data-bind='var: product(pid); format:text; className: stid; pretext: Sku#: ;'></h6>
 
 
 	<div class='priceContainer'>
-		<h4 class='basePrice' data-bind='var: product(zoovy:base_price); format:money; currencySign: $;  hideZero:true; pretext: Our Price: ;'></h4>
+		<h6 class='ztable_row_small stid' data-bind='var: product(pid); format:text; className: stid; pretext: Sku#: ;'></h6>
+		<h4 class='basePrice' data-bind='var: product(zoovy:base_price); format:money; currencySign: $;  hideZero:true; pretext: Price: ;'></h4>
 		<!--<h5 class='prodMSRP' data-bind='var: product(zoovy:prod_msrp); format:money; currencySign: $;  hideZero:true; pretext: MSRP: ;'></h5>-->
+		<!--
 		<span class='savings'>
 			<span class='savingsDifference' data-bind='var: product(pid); format:priceRetailSavingsDifference; extension:myRIA; pretext: You save: ;'></span>
 			<span class='savingsPercentage' data-bind='var: product(pid); format:priceRetailSavingsPercentage; extension:myRIA; pretext: (; posttext:);'></span>
 		</span>
+		-->
 	</div>
 	
+	<!--
 	<div data-bind='var: product(zoovy:ship_latency); format:shippingLatency;' class='latency'></div>
 	<div class="quickviewSpecial">
 		<div class='header center floatLeft' data-bind="var: product(is:specialorder); format:addClass; className:specialorder spriteBG pointer;" onClick="return showContent('company',{'show':'shipping'});"></div>
 	</div>
-
+	-->
+	<section id='prodViewerReviewSummary' class='marginBottom'>
+		<span data-bind='var: reviews(reviews.average); format:addClass; className:review_;' class='reviewSprite'></span>
+		<span data-bind='var: reviews(reviews.total); format:text;posttext: from ;posttext: reviews; className:numReviews;'></span>
+	</section>
+	
+	<div id="prodDesc" data-bind='var: product(zoovy:prod_desc); format:wiki; wikiFormats:myRIA;'></div>
+	
+	
 	<form data-bind='var: product(pid); format:atcForm; extension:store_product;' class='prodViewerAddToCartForm clearfix' id='prodQuickViewAddToCartFrm' action='#' onSubmit="app.ext.myRIA.u.handleAddToCart($(this),{'action':'modal'}); return false;">
 
 		<fieldset data-bind='var: product(pid); format:atcVariations; extension:store_product;' class='borderNone'></fieldset>
@@ -792,13 +803,40 @@ It's done this way because ID's hard coded into template are bad mojo (templates
 
 		<input type='submit' value='Add to Cart' class='ui-button ui-button-text ui-corner-all ui-state-default addToCartButton displayNone floatLeft marginLeft' data-bind='var: product(pid); format:addToCartButton; extension:store_product;' id='addToCartBtn' />
 	</form>
+	
+	
+	<div class='prodGuarantee'>
+		<div class="prodBannerContainer">
+			<div class='header center' data-bind="var: product(is:user6); format:addClass; className:soldOut spriteBG;"></div>
+			<div class='header center' data-bind="var: product(is:user4); format:addClass; className:backorder spriteBG pointer;" onClick="$('#invMessage_is_backorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_backorder').dialog('open');"></div>
+			<div class='header center' data-bind="var: product(is:preorder); format:addClass; className:preorder spriteBG;"></div>
+			<div class='header center' data-bind="var: product(is:specialorder); format:addClass; className:specialorder spriteBG pointer;" onClick="return showContent('company',{'show':'shipping'});"></div>
+			<div class='header center spriteBG inStock'></div>
+		</div>
+	<div class='header center shiplatency' data-bind="var:product(zoovy:ship_latency); format:shippingLatency;"></div>
 
-	<section id='prodViewerReviewSummary' class='marginBottom'>
-		<span data-bind='var: reviews(reviews.average); format:addClass; className:review_;' class='reviewSprite'></span>
-		<span data-bind='var: reviews(reviews.total); format:text;posttext: from ;posttext: reviews; className:numReviews;'></span>
-	</section>
+		<ul class='checkmarkList'>
+			<li class='displayNone' data-bind="var: product(is:preorder); defaultVar: product(is:user4); format:showIfSet;">
+				No billing occurs until shipping (<a onClick="app.u.showBillShipModal(); return false;" class='tipify'>?</a>)
+			</li>
+			
+			<li>60-Day return policy  (<a onClick="app.u.showReturnPolModal(); return false;" class='tipify'>?</a>)
+			</li>
+			
+			<li class='displayNone' data-bind="var: product(is:user5); format:showIfSet;">Ships in 1-2 days  (<a onClick="app.u.showStockShipModal(); return false;" class='tipify'>?</a>)
+			</li>
 
-	<div id="prodDesc" data-bind='var: product(zoovy:prod_desc); format:wiki; wikiFormats:myRIA;'></div>
+			<li>100% Secure checkout</li>
+			<li>YES, we ship worldwide! (<a onClick="app.u.showWorldShipModal(); return false;" class='tipify'>?</a>)
+			</li>
+		</ul>
+
+		<h6 class="alignCenter">Add item to cart for shipping</h6>
+
+	</div>
+	
+
+
 
 	</td>
 </tr>
