Create Account Button Styling
set to blue as a call to action, same as checkout button styling.

--- a/index.html
+++ b/index.html
@@ -1687,7 +1687,7 @@ The 'data-action' attribute is used to assign an onclick.
 
 <div>
 <hr />
-<button class='ui-button-text ui-button ui-state-default ui-corner-all ' onClick="showContent('customer',{'show':'newsletter'});">Create Account</button>
+<button class='ui-button-text ui-button ui-state-default ui-corner-all createAccountButton' onClick="showContent('customer',{'show':'newsletter'});">Create Account</button>
 </div>
 
 
