--- a/index.html
+++ b/index.html
@@ -806,14 +806,14 @@ It's done this way because ID's hard coded into template are bad mojo (templates
 	
 	
 	<div class='prodGuarantee'>
-		<div class="prodBannerContainer">
-			<div class='header center' data-bind="var: product(is:user6); format:addClass; className:soldOut spriteBG;"></div>
-			<div class='header center' data-bind="var: product(is:user4); format:addClass; className:backorder spriteBG pointer;" onClick="$('#invMessage_is_backorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_backorder').dialog('open');"></div>
-			<div class='header center' data-bind="var: product(is:preorder); format:addClass; className:preorder spriteBG;"></div>
-			<div class='header center' data-bind="var: product(is:specialorder); format:addClass; className:specialorder spriteBG pointer;" onClick="return showContent('company',{'show':'shipping'});"></div>
-			<div class='header center spriteBG inStock'></div>
+		<div class="prodBannerContainer quickviewProdBannerContainer">
+			<div class='header' data-bind="var: product(is:user6); format:addClass; className:soldOut spriteBG;"></div>
+			<div class='header' data-bind="var: product(is:user4); format:addClass; className:backorder spriteBG pointer;" onClick="$('#invMessage_is_backorder').dialog({width:'60%','modal':'true',autoOpen:false}); $('#invMessage_is_backorder').dialog('open');"></div>
+			<div class='header' data-bind="var: product(is:preorder); format:addClass; className:preorder spriteBG;"></div>
+			<div class='header' data-bind="var: product(is:specialorder); format:addClass; className:specialorder spriteBG pointer;" onClick="return showContent('company',{'show':'shipping'});"></div>
+			<div class='header spriteBG inStock'></div>
 		</div>
-	<div class='header center shiplatency' data-bind="var:product(zoovy:ship_latency); format:shippingLatency;"></div>
+	<div class='header shiplatency' data-bind="var:product(zoovy:ship_latency); format:shippingLatency;"></div>
 
 		<ul class='checkmarkList'>
 			<li class='displayNone' data-bind="var: product(is:preorder); defaultVar: product(is:user4); format:showIfSet;">
