--- a/index.html
+++ b/index.html
@@ -518,11 +518,11 @@ remember to NOT put the button inside the 'onclick' container or two events will
 	<div onClick="showContent('product',{'pid':$(this).attr('data-pid')})" data-bind='var:product(pid);format:assignAttribute; attribute:data-pid;' class='pointer'>
 		<h5 class="prodName" data-bind='var: product(prod_name); format:text;'></h5>
 		<div class='prodThumbContainer'>
-		<img src='blank.gif' class='prodThumb' data-bind='var: product(images); format:elasticImage1URL;bgcolor:ffffff;' width='190' height='190' />
+		<img src='blank.gif' class='prodThumb' data-bind='var: product(images); format:imageURL; isElastic:1; bgcolor:ffffff;' width='190' height='190' />
 		</div>
 
 		<div class="priceContainer">
-			<h6 class="basePrice marginLeft" data-bind='var: product(base_price); format:elasticMoney; currencySign: $;  hideZero:true; className:price;'></h6>
+			<h6 class="basePrice marginLeft" data-bind='var: product(base_price); format:money; isElastic:1; currencySign: $;  hideZero:true; className:price;'></h6>
 		</div>
 	</div>
 </li>
