Switched lists to zoovy:prod_seo_title from zoovy:prod_name

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ container ul should have lineItemProdlist class on it instead of productList
 <li id='productListTemplateATC' class='loadingBG  plContainer' >
 	<div data-bind='var:product(pid);format:assignAttribute; attribute:data-pid;'>
 
-		<h5 data-bind='var: product(zoovy:prod_name); format:text;'></h5>
+		<h5 data-bind='var: product(zoovy:prod_seo_title); format:text;'></h5>
 
 		<div class='prodThumbContainer floatLeft'>
 		<img src='blank.gif' class='prodThumb' data-bind='var: product(zoovy:prod_image1); format:imageURL;' width='190' height='190' />
