--- a/index.html
+++ b/index.html
@@ -828,17 +828,29 @@ It's done this way because ID's hard coded into template are bad mojo (templates
 
 		<ul class='checkmarkList'>
 			<li class='displayNone' data-bind="var: product(is:preorder); defaultVar: product(is:user4); format:showIfSet;">
-				No billing occurs until shipping (<a onClick="app.u.showBillShipModal(); return false;" class='tipify'>?</a>)
+				No billing occurs until shipping 
+				<!--
+					(<a onClick="app.u.showBillShipModal(); return false;" class='tipify'>?</a>)
+				-->
 			</li>
 			
-			<li>60-Day return policy  (<a onClick="app.u.showReturnPolModal(); return false;" class='tipify'>?</a>)
+			<li>60-Day return policy  
+				<!--
+					(<a onClick="app.u.showReturnPolModal(); return false;" class='tipify'>?</a>)
+				-->
 			</li>
 			
-			<li class='displayNone' data-bind="var: product(is:user5); format:showIfSet;">Ships in 1-2 days  (<a onClick="app.u.showStockShipModal(); return false;" class='tipify'>?</a>)
+			<li class='displayNone' data-bind="var: product(is:user5); format:showIfSet;">Ships in 1-2 days  
+				<!--
+					(<a onClick="app.u.showStockShipModal(); return false;" class='tipify'>?</a>)
+				-->
 			</li>
 
 			<li>100% Secure checkout</li>
-			<li>YES, we ship worldwide! (<a onClick="app.u.showWorldShipModal(); return false;" class='tipify'>?</a>)
+			<li>We ship worldwide! 
+				<!--
+					(<a onClick="app.u.showWorldShipModal(); return false;" class='tipify'>?</a>)
+				-->
 			</li>
 		</ul>
 
