--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ var app = {vars:{
 	"release":"20130208164200",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
-	"httpsURL":"https://ssl.zoovy.com/s=www.9c0a9a.snap.zoovy.net/",
-	"httpURL":"http://www.9c0a9a.snap.zoovy.net/"
+	"httpsURL":"https://ssl.zoovy.com/s=app.gkworld.com/",
+	"httpURL":"http://app.gkworld.com/"
 	},u:{},rq:[]};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
