--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"20130211133300",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20130211133700",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
-	"httpsURL":"https://ssl.zoovy.com/s=app.gkworld.com/",
+	"httpsURL":"https://secure.gkworld.com/s=app.gkworld.com/",
 	"httpURL":"http://app.gkworld.com/"
 	},u:{},rq:[]};
 
