Accessories tab renamed to Related Items

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@ It's done this way because ID's hard coded into template are bad mojo (templates
 		<li class='prodFeaturesTab displayNone' data-bind='var: product(zoovy:prod_features); format:showIfSet;'><a href='#'>Features</a></li>
 		<li class='prodReviewsTab'><a href='#'>Reviews</a></li>
 		<li class='prodVideoTab displayNone' data-bind='var: product(youtube:videoid); format:showIfSet;'><a href='#'>Video</a></li>
-		<li class='prodAccessoriesTab displayNone' data-bind='var: product(zoovy:accessory_products); format:showIfSet;'><a href='#'>Accessories</a></li>
+		<li class='prodAccessoriesTab displayNone' data-bind='var: product(zoovy:accessory_products); format:showIfSet;'><a href='#'>Related Items</a></li>
 	</ul>
 
 	<div class='tabContent'>
