--- a/index.html
+++ b/index.html
@@ -654,13 +654,18 @@ this will likely become more flexible in the future. ###
 
 	<div data-bind='var:product(zoovy:qty_price);format:quantityDiscounts; extension:store_product; pretext:Quantity Discounts:; className:marginBottom;'></div>
 	
+	<!--
 	<div class="addthis_toolbox addthis_default_style ">
 		<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
 		<a class="addthis_button_tweet"></a>
 		<a class="addthis_button_pinterest_pinit"></a>
-		<a class="addthis_counter addthis_pill_style"></a>
+		<a class="addthis_counter addthis_pill_style" onClick="return false;"></a>
 	</div>
-
+	-->
+	<div class="socialLinks">
+	</div>
+	
+	
 	<span id="buySAFE_Kicker" name="buySAFE_Kicker" type="Kicker Guaranteed Transparent 33 175x30"></span>
 	</td>
 		<td>
@@ -675,7 +680,10 @@ this will likely become more flexible in the future. ###
 		<div class='header center spriteBG inStock'></div>
 	</div>
 <div class="header shiplatency">
-	<img src="images/gk09_icon_shipping-42x25.png" /><span data-bind="var:product(zoovy:ship_latency); format:shippingLatency;"></span>
+	<!--
+	<img src="images/gk09_icon_shipping-42x25.png" />
+	-->
+	<span data-bind="var:product(zoovy:ship_latency); format:shippingLatency;"></span>
 </div>
 	<ul class='checkmarkList'>
 		<li class='displayNone' data-bind="var: product(is:preorder); defaultVar: product(is:user4); format:showIfSet;">
@@ -839,7 +847,10 @@ It's done this way because ID's hard coded into template are bad mojo (templates
 			<div class='header spriteBG inStock'></div>
 		</div>
 	<div class="header shiplatency">
-		<img src="images/gk09_icon_shipping-42x25.png" /><span data-bind="var:product(zoovy:ship_latency); format:shippingLatency;"></span>
+		<!--
+		<img src="images/gk09_icon_shipping-42x25.png" />
+		-->
+		<span data-bind="var:product(zoovy:ship_latency); format:shippingLatency;"></span>
 	</div>
 
 		<ul class='checkmarkList'>
