Addthis extension refinement
oncompletes functional, testing .toolbox method.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPLOYMENT!
 var myCreole;
 
+var addthis_share = {
+	url : "",
+	title : ""
+};
+
+
 var app = {vars:{
 	"release":"20130213123400",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
