Addthis Extension OpenGraph, moved global config

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!-- do not populate or add meta data or title, the SEO layer will add it -->
 
 <!-- used for optional social media extensions -->
+<meta property="og:url" content="" id='ogURL' />
 <meta property="og:type" content="" id='ogType' />
 <meta property="og:image" content="" id='ogImage' />
 <meta property="og:description" content="" id='ogDescription' />
@@ -19,10 +20,7 @@
 var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPLOYMENT!
 var myCreole;
 
-var addthis_share = {
-	url : "",
-	title : ""
-};
+
 
 
 var app = {vars:{
