Addthis Username var added, cleanup

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPLOYMENT!
 var myCreole;
 
-
+addthis_id = 'gkworld';
 
 
 var app = {vars:{
