--- a/extensions/checkout_nice/templates.html
+++ b/extensions/checkout_nice/templates.html
@@ -335,7 +335,7 @@ do NOT change the input name or id or checkout will likely break.
 	</div>
 
 
-	<div id='orderSummaryDetails' class='orderSummaryDetails'>
+	<div id='orderSummaryDetails' class='orderSummaryDetails contentContainer'>
 		<h2>Thank you! Your order has been placed.</h2>
 		<h3 data-bind='var: order(orderid); format:text; pretext:Your order id is ;'></h3>
 		<div id='orderSummaryLinkToInvoice' class=' pointer' data-bind='var:order(orderid); format:orderStatusLink; extension: store_checkout;'>
