--- a/index.html
+++ b/index.html
@@ -1217,25 +1217,14 @@ adding classes is not likely to have any bad effects.
 
 <div id='searchTemplate' class='searchResultsPage clearfix'>
 
-	<div class='sideline' >
-	<nav id='searchNav'>
-	<ul class='listStyleNone noPadOrMargin'><!--
-		<li id='altSearchesContainer'>
-		<h3 class='ui-accordion-header ui-helper-reset ui-state-default ui-corner-top '>Alternative Searches</h3>
-		<ul id='altSearchesList' class='ui-corner-bottom ui-accordion-content ui-helper-reset ui-widget-content'></ul>
-		</li>
-	-->
-		<li id='recentSearchesContainer'>
-		<h3 class='ui-accordion-header ui-helper-reset ui-state-default ui-corner-top '>Recent Searches</h3>
-		<ul id='recentSearchesList' class='ui-corner-bottom ui-accordion-content ui-helper-reset ui-widget-content'></ul>
-		</li>
-	</ul>
-	</nav>
+	<!-- the div is use to show a detailed view of a product. should be hidden by default. -->
+	<div class='previewProductDetail displayNone'></div>
+
+	<div class='previewListContainer'>
+		<!-- productListTemplateResults gets loaded into here -->
+		<ul id='resultsProductListContainer' class='listStyleNone fluidList noPadOrMargin productList'></ul>
 	</div>
 
-	<div class='mainColumn'>
-		<ul id='resultsProductListContainer' class='listStyleNone fluidList noPadOrMargin productList'></ul><!-- productListTemplateResults gets loaded into here -->
-	</div>
 </div>
 
 
