Revert "httpsURL fix, Versioning"
This reverts commit 7d0de02b56648cc050dd7ff816d438aecb238855.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ addthis_id = 'gkworld';
 
 
 var app = {vars:{
-	"release":"20130301104500",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20130301084900",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"_clientid":"zmvc",
 	"baseURL":"",
 //	"httpsURL":"https://secure.gkworld.com/s=www.gkworld.com/",
 //	"httpURL":"http://www.gkworld.com/"
-	"httpsURL":"https://www-9c0a9a-snap-zoovy-net.app-hosted.com/s=app.9c0a9a.snap.zoovy.net/",
+	"httpsURL":"https://secure.gkworld.com/s=app.9c0a9a.snap.zoovy.net/",
 	"httpURL":"http://app.9c0a9a.snap.zoovy.net/"
 	},u:{},rq:[]};
 
